--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/thomasthiebaud/fastify-schema-to-typescript#readme",
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
@@ -38,17 +38,17 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.1",
-    "@types/node": "^15.0.2",
-    "fastify": "^3.15.1",
+    "@types/node": "^15.12.2",
+    "fastify": "3.17.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.4",
     "pinst": "^2.1.6",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.2",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "semantic-release": "^17.4.3",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "commander": "^7.2.0",
@@ -57,6 +57,6 @@
     "json-schema-to-typescript": "^10.1.4"
   },
   "peerDependencies": {
-    "fastify": "^3.2.1"
+    "fastify": "^3.17.0"
   }
 }
